--- a/WpfControlLibrary1/UserControl1.xaml
+++ b/WpfControlLibrary1/UserControl1.xaml
@@ -1,12 +1,64 @@
-﻿<UserControl x:Class="WpfControlLibrary1.UserControl1"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfControlLibrary1"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl
+    x:Class="WpfControlLibrary1.UserControl1"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:WpfControlLibrary1"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:wpfTool="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+    <UserControl.Resources>
+        <Style x:Key="RegText">
+            <Setter Property="Control.FontSize" Value="16" />
+        </Style>
+    </UserControl.Resources>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Rectangle Grid.RowSpan="2" Fill="White" />
+        <TextBlock FontSize="24" Text="Registration" />
+        <StackPanel
+            Grid.Row="1"
+            Width="200"
+            Style="{StaticResource RegText}">
+
+            <TextBlock Text="Login" />
+            <TextBox x:Name="LoginBox" TextChanged="LoginBox_TextChanged" />
+
+            <TextBlock Text="Password" />
+            <PasswordBox x:Name="PasswBox" PasswordChanged="PasswBox_PasswordChanged" />
+
+            <TextBlock Text="Repeat password" />
+            <PasswordBox x:Name="RepeatPasswBox" PasswordChanged="RepeatPasswBox_PasswordChanged" />
+
+            <TextBlock Text="Secret question" />
+            <ComboBox x:Name="SectetQBox" SelectionChanged="SectetQBox_SelectionChanged">
+                <ComboBoxItem Content="Sample question" />
+            </ComboBox>
             
+            <TextBlock Text="Secret answer" />
+            <TextBox x:Name="SectetABox" TextChanged="SectetABox_TextChanged" />
+
+            <TextBlock Text="EMail" />
+            <TextBox x:Name="EMailBox" TextChanged="EMailBox_TextChanged" />
+
+            <TextBlock Text="Phone number" />
+            <wpfTool:MaskedTextBox
+                x:Name="PhoneBox"
+                Mask="+7(999)9999999"
+                TextChanged="PhoneBox_TextChanged" />
+
+            <TextBlock Text="Passport" />
+            <wpfTool:MaskedTextBox
+                x:Name="PassportBox"
+                Mask="9999 999999"
+                TextChanged="PassportBox_TextChanged" />
+
+
+        </StackPanel>
     </Grid>
 </UserControl>
